# ncpi

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: joss-paper.yml  tests.yml
ccpi/: Analysis.py  Features.py  FieldPotential.py  Inference.py  __init__.py
data/: density_estimator.pkl  model.pkl  scaler.pkl
docs/: api.html  capture_webui_dashboard.py  citation.html  contributing.html  credits.html  datasets.html  docs_style.css  faq.html  index.html  installation.html  nav-submenu-link.js  tutorials.html
docs/joss_paper/: Makefile  paper.bib  paper.md
docs/new/: index.html
docs/notebooks/: computational_neuroscientists.html  computational_neuroscientists.ipynb  experimentalists.html  experimentalists.ipynb  feature_extraction.ipynb  getting_started.html  getting_started.ipynb  inverse_model_training.html  inverse_model_training.ipynb  researchers_ML_SBI.html  researchers_ML_SBI.ipynb  simulation_lif.ipynb
docs/old/: API.html  Citation.html  Contributing.html  Credits.html  FAQ.html  index.html  tutorials.html  webui.html
docs/old/notebooks/: experimentalists.html  feature_extraction.html
docs/old/tutorials/: computational_neuroscientists.html  experimentalists.html  feature_extraction.html  getting_started.html  inverse_model_training.html  researchers_ML_SBI.html  simulation_lif.html
docs/paper/: paper.bib  paper.md
docs/tutorials/: computational_neuroscientists.html  experimentalists.html  feature_extraction.html  getting_started.html  inverse_model_training.html  jupyter-index.html  researchers_ML_SBI.html  simulation_lif.html  webui-index.html
docs/tutorials/automation/: compute_field_potentials_webui.py  compute_predictions_webui.py  empirical_data_processing_webui.py  extract_features_webui.py  generate_webui_information_reference.py  plot_empirical_results_webui.py  presentation_webui.py  simulate_lif_network_webui.py  train_inverse_model_webui.py  tutorial_cursor.py
docs/tutorials/jupyter/: compute-field-potentials.html  compute-predictions.html  empirical-data-processing.html  extract-features.html  load-empirical-data-extract-features-compute-predictions.html  plot-empirical-results.html  plot-simulation-results.html  simulate-lif-network.html  train-inverse-model.html  training-predictions.html
docs/tutorials/webui/: compute-field-potentials.html  compute-predictions.html  empirical-data-processing.html  extract-features.html  load-empirical-data-extract-features-compute-predictions.html  plot-empirical-results.html  plot-simulation-results.html  simulate-lif-network.html  train-inverse-model.html  webui-information-reference.html
docs/v0.2.6/: API.html  Citation.html  Contributing.html  Credits.html  FAQ.html  index.html  tutorials.html
docs/v0.2.6/notebooks/: computational_neuroscientists.html  computational_neuroscientists.ipynb  experimentalists.ipynb  getting_started.html  getting_started.ipynb  inverse_model_training.html  inverse_model_training.ipynb  researchers_ML_SBI.html  simulation_lif.html
docs/v0.2.6/tutorials/: computational_neuroscientists.html  experimentalists.html  feature_extraction.html  getting_started.html  inverse_model_training.html  researchers_ML_SBI.html  simulation_lif.html
examples/: README.md  analysis_example.py  tools.py
examples/EEG_AD/: EEG_AD.py
examples/EEG_AD/figures/: EEG_predictions.py
examples/EEG_AD_FTD/: EEG_AD_FTD.py  config.json
examples/EEG_AD_FTD/figures/: EEG_predictions.py
examples/Hagen_model/: EEG_AD_FTD.py  EEG_AD_FTD_Pablo.py  EEG_data_AD_FTD.py  EEG_data_AD_FTD_SHAP.py  LFP_Chini_developing_brain.py  config.json
examples/LFP_developing_brain/: LFP_developing_brain.py  config.json
examples/simulation/Cavallari_model/neuron_model/: CMakeLists.txt  README.md  install.sh
examples/simulation/Cavallari_model/neuron_model/src/: CMakeLists.txt  cavallari_module.cpp  iaf_bw_2003.cpp  iaf_bw_2003.h
examples/statistics/: lmer_example.py
github/workflows/: tests.yml
ncpi/: Analysis.py  EphysDatasetParser.py  Features.py  FieldPotential.py  Inference.py  PosteriorTrainer.py  Simulation.py  __init__.py  neuron_utils.py  tools.py
tests/: conftest.py  test_1.py  test_EEG_AD_FTD.py  test_Inference.py  test_SHAP.py  test_eeg_topographic_plot.py  test_fEI.py  test_poctep.py  test_simple.py  test_tools.py  test_webui_launcher.py  tools.py
tests/Analysis/: test_lmer.py
tests/EEG_AD/: test_EEG.py
tests/EphysDatasetParser/: test_EphysDatasetParser.py  test_ParseConfig.py
tests/Features/: test_catch22.py  test_crosci_dfa_fei.py  test_features_compute_features.py  test_hctsa.py  test_specparam.py  test_subsample_Chus.py  test_subsample_Krukow_EEGLab.py  test_subsample_LFP_baseline.py  test_subsample_POCTEP_RAW.py
tests/FieldPotential/: test_FieldPotential.py
tests/Inference/: test_Inference.py
tests/LFP_developing_brain/: test_LFP.py
tests/test_EEG/: test_EEG.py
tests/test_LFP/: test_LFP.py
tests/webui/: conftest.py
webui/: app.py  compute_utils.py  launcher.py  tmp_paths.py
webui/templates/: 0.dashboard.html  1.1.0.upload_sim.html  1.1.upload_sim.html  1.2.0.new_sim.html  1.2.1.new_sim_brunel.html  1.2.1.new_sim_custom.html  1.2.2.new_sim_brunel.html  1.2.2.new_sim_custom.html  1.2.2.new_sim_hagen.html  1.2.3.new_sim_four_area.html  1.2.4.new_sim_cavallari.html  1.simulation.html  2.1.0.field_potential_load.html  2.1.field_potential_kernel.html  2.2.0.field_potential_kernel.html  2.2.field_potential_proxy.html  2.3.0.field_potential_proxy.html  2.3.field_potential_load.html  2.field_potential.html  2.field_potential_old.html  3.0.load_precomputed_features.html  3.1.features_content.html  3.1.features_methods.html  3.features.html  4.0.load_data.html  4.1.0.load_precomputed_predictions.html  4.1.new_training.html  4.2.0.new_training.html  4.2.compute_predictions.html  4.3.0.compute_predictions.html  4.inference.html  5.1.0.analysis.html  5.2.0.analysis_plot_results.html  5.analysis.html  analysis_plot_result.html  base.html  loading_page.html  module_options_menu.html  sessions.html  two_option_menu.html
(+137 files in other folders)
