[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncpi"
version = "0.2.6"
description = "Neural circuit parameter inference using electrophysiological data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "necolab", email = "pablomc@ugr.es"}]
keywords = ["biomarkers", "parameter-inference", "neural-circuits", "electrophysiological-data", "brain-simulation"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"

dependencies = [
    "scikit-learn==1.5.0",
    "sbi==0.24.0",
    "torch",
    "pycatch22",
    "specparam",
    "matplotlib",
    "numpy",
    "packaging",
    "pandas",
    "requests",
    "scipy",
    "tqdm",
    "flask",
    "pyarrow"
]

[project.optional-dependencies]
# hctsa (MATLAB backend) dependencies
hctsa = [
    "h5py",
    "matlabengine",
]

# Statistical analysis (R via rpy2)
analysis = [
    "rpy2",
    "mne",
]
# Field potential / kernel workflows
fieldpotential = [
    "LFPy",
    "lfpykernels",
    "lfpykit",
    "h5py",
    "neuron",
]
# M/EEG utilities (band/spectrum DFA/fEI)
meeg = [
    "mne",
]

# Example notebooks/scripts
examples = [
    "pdf2image",
    "seaborn",
    "statsmodels",
]
# Test dependencies (includes optional backends)
tests = [
    "LFPy",
    "h5py",
    "lfpykernels",
    "lfpykit",
    "matlabengine",
    "mne",
    "neuron",
    "pytest",
    "rpy2",
    "scikit-learn==1.5.0",
    "sbi==0.24.0",
    "torch",
]
# Everything (union of optional deps)
all = [
    "h5py",
    "LFPy",
    "lfpykernels",
    "lfpykit",
    "matlabengine",
    "mne",
    "neuron",
    "pdf2image",
    "pytest",
    "rpy2",
    "scikit-learn==1.5.0",
    "seaborn",
    "sbi==0.24.0",
    "statsmodels",
    "torch",
]


[project.urls]
repository = "https://github.com/necolab-ugr/ncpi"
documentation = "https://necolab-ugr.github.io/ncpi"

# Package installation configuration
[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # list of packages to include (["*"] by default)
exclude = ["tests", "tests.*"]  # list of packages to exclude (["tests"] by default)
