[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncpi"
version = "0.2.6"
description = "Neural circuit parameter inference using electrophysiological data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "necolab", email = "pablomc@ugr.es"}]
keywords = ["biomarkers", "parameter-inference", "neural-circuits", "electrophysiological-data", "brain-simulation"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"

dependencies = [
    "scikit-learn==1.5.0",
    "sbi==0.24.0",
    "torch",
    "pycatch22",
    "specparam",
    "matplotlib",
    "numpy",
    "packaging",
    "pandas",
    "requests",
    "scipy",
    "tqdm",
    "flask",
    "werkzeug",
    "pyarrow"
]

[project.optional-dependencies]
# hctsa (MATLAB backend) dependencies
hctsa = [
    "h5py",
    "matlabengine",
]

# Dataset parser backends (FIF/EDF/HDF5/MAT variants)
parser = [
    "h5py",
    "mne",
    "pyEDFlib",
]

# Statistical analysis (R via rpy2)
analysis = [
    "rpy2",
    "mne",
    "nibabel",
]
# Field potential / kernel workflows
fieldpotential = [
    "LFPy",
    "lfpykernels",
    "lfpykit",
    "h5py",
    "neuron",
]
# M/EEG utilities (band/spectrum DFA/fEI)
meeg = [
    "mne",
    "nibabel",
]

# WebUI/runtime plotting backends
webui = [
    "Pillow",
    "h5py",
    "mne",
    "nibabel",
]

# Example notebooks/scripts
examples = [
    "h5py",
    "LFPy",
    "mpi4py",
    "nest-simulator",
    "neuron",
    "pdf2image",
    "pycatch22",
    "seaborn",
    "specparam",
    "statsmodels",
]
# Test dependencies (includes optional backends)
tests = [
    "LFPy",
    "h5py",
    "lfpykernels",
    "lfpykit",
    "matlabengine",
    "mne",
    "nibabel",
    "neuron",
    "playwright",
    "Pillow",
    "pyEDFlib",
    "pytest",
    "rpy2",
    "scikit-learn==1.5.0",
    "sbi==0.24.0",
    "specparam",
    "torch",
]


[project.urls]
repository = "https://github.com/necolab-ugr/ncpi"
documentation = "https://necolab-ugr.github.io/ncpi"

# Package installation configuration
[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # list of packages to include (["*"] by default)
exclude = ["tests", "tests.*"]  # list of packages to exclude (["tests"] by default)
