[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncpi"
version = "1.0.0b1"
description = "Neural circuit parameter inference using electrophysiological data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "necolab", email = "pablomc@ugr.es"}]
keywords = ["biomarkers", "parameter-inference", "neural-circuits", "electrophysiological-data", "brain-simulation"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"

dependencies = [
    "scikit-learn==1.5.0",
    "sbi==0.24.0",
    "arviz<0.22",
    "torch",
    "pycatch22",
    "specparam",
    "matplotlib",
    "numpy",
    "packaging",
    "pandas",
    "requests",
    "scipy",
    "tqdm",
    "flask",
]

[project.optional-dependencies]

# Dataset parser backends (FIF/EDF/HDF5/MAT variants)
parser = [
    "h5py",
    "mne",
    "pandas",
    "pyEDFlib",
    "pyarrow",
    "pynwb",
]

# Analysis module dependencies
analysis = [
    "rpy2",
    "mne",
    "nibabel",
    "pyvista",
    "pyvistaqt",
    "qtpy",
    "PyQt5",
    "ipywidgets",
    "ipyevents",
]

# Field potential / kernel workflows + M/EEG utilities
fieldpotential = [
    "LFPy",
    "lfpykernels",
    "lfpykit",
    "h5py",
    "neuron",
    "mne",
    "nibabel",
]

# WebUI/runtime plotting backends
webui = [
    "Pillow",
    "h5py",
    "mne",
    "nibabel",
    "pyEDFlib",
    "pyarrow",
    "pynwb",
    "openpyxl",
    "xlrd",
]

# Example notebooks/scripts
examples = [
    "h5py",
    "LFPy",
    "mpi4py",
    #"nest-simulator==3.8.*",
    "neuron",
    "pdf2image",
    "seaborn",
    "statsmodels",
]

# hctsa (MATLAB backend) dependencies
hctsa = [
    "h5py",
    "matlabengine",
]

# Test dependencies (includes optional backends)
tests = [
    "LFPy",
    "h5py",
    "lfpykernels",
    "lfpykit",
    #"nest-simulator==3.8.*",
    #"matlabengine",
    "mne",
    "nibabel",
    "neuron",
    "playwright",
    "Pillow",
    "pyEDFlib",
    "pynwb",
    "pytest",
    "rpy2",
]

# All optional dependencies
all = [
    "h5py",
    "mne",
    "pandas",
    "pyEDFlib",
    "pyarrow",
    "pynwb",
    "rpy2",
    "nibabel",
    "pyvista",
    "pyvistaqt",
    "qtpy",
    "PyQt5",
    "ipywidgets",
    "ipyevents",
    "LFPy",
    "lfpykernels",
    "lfpykit",
    "neuron",
    "Pillow",
    "openpyxl",
    "xlrd",
    "mpi4py",
    "pdf2image",
    "seaborn",
    "statsmodels",
    "matlabengine",
    "playwright",
    "pytest",
]


[project.urls]
repository = "https://github.com/necolab-ugr/ncpi"
documentation = "https://necolab-ugr.github.io/ncpi"

# Package installation configuration
[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # list of packages to include (["*"] by default)
exclude = ["tests", "tests.*"]  # list of packages to exclude (["tests"] by default)
